--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,13 @@ media/
 staticfiles/
 
 # Environment variables
-env
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
 
 # VS Code files
 .vscode/
