--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ __pycache__/
 
 # Virtual environment folder (replace "venv" with your virtual environment's name if different)
 venv/
+ENV/
+env/
+.env
 
 # Django files
 *.log
